# todo-app

./: Dockerfile  docker-compose.yaml  pyproject.toml
api/: db.py  main.py  migrate_db.py
api/cruds/: done.py  task.py
api/models/: task.py
api/redis/: redis.py
api/routers/: done.py  task.py  user_security.py
api/schemas/: task.py
